Fixes #1064: Sidebar appears on small and mobile screens (#1080)
* Fixes #1064: Sidebar appears on small and mobile screens

* Fixed Alignment and position of statistics box

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -477,9 +477,100 @@ div.autocorrect {
   }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 1160px) {
   div.combo-box {
     display: none;
+  }
+}
+@media screen and (max-width: 1159px) and (min-width: 1080px){
+  div.combo-box {
+    margin-left: 13%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: 0%;
+  }
+  #result-message{
+    margin-left: 14%;
+  }
+}
+@media screen and (max-width: 1079px) and (min-width: 1001px){
+  div.combo-box {
+    margin-left: 10%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: -0.5%;
+  }
+  #result-message{
+    margin-left: 12%;
+  }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 960px){
+  div.combo-box {
+    margin-left: 11%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: 0%;
+  }
+  #result-message{
+    margin-left: 13%;
+  }
+}
+@media screen and (max-width: 960px) and (min-width: 931px){
+  div.combo-box {
+    margin-left: 11.2%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: 0%;
+  }
+  #result-message{
+    margin-left: 13%;
+  }
+}
+
+@media screen and (max-width: 930px) and (min-width: 816px){
+  div.combo-box {
+    margin-left: 12.2%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: 0%;
+  }
+  #result-message{
+    margin-left: 13.5%;
+  }
+}
+@media screen and (max-width: 815px) and (min-width: 768px){
+  div.combo-box {
+    margin-left: 14%;
+  }
+  .result{
+    margin-left: -2%;
+  }
+  #toggle-button{
+    margin-left: 1%;
+  }
+  #result-message{
+    margin-left: 14%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .intelligence {
+    margin-left: 4%;
   }
 }
 
